# OpcUa-Testing

./: .gitignore  README.md  pyproject.toml  requirements.txt  tox.ini
data/dataset/: 1024_Sha1.csv  1024_Sha224.csv  1024_Sha256.csv  1024_Sha384.csv  1024_Sha512.csv  2048_Sha1.csv  2048_Sha224.csv  2048_Sha256.csv  2048_Sha384.csv  2048_Sha512.csv  3072_Sha1.csv  3072_Sha224.csv  3072_Sha256.csv  3072_Sha384.csv  3072_Sha512.csv  4096_Sha1.csv  4096_Sha224.csv  4096_Sha256.csv  4096_Sha384.csv  4096_Sha512.csv  time_connections.csv
experiments/ag_opcua/: ag_m.py  analisys.ipynb  gen_certificates.py  prosys_performance.py  prosys_performance_uml.py  random_table.csv  requirements.txt  server_ua.py  server_ua_encryp.py
experiments/cap_ua/: cap_ua.py  data.json  data.json.txt  data.pcap  path.json  scapy_all.ipynb
experiments/performance/: client_performance.py
experiments/simulation_ua/: analisys.ipynb  client_prosys.py  client_simu.py  data.csv  docker-compose.yml  gen_cert_mqtt.sh  influxdb_simu.py  monitoring.py  monitoring_service.service  mqtt_client.py  performance_simu.py  server-ua.service  server_ua_encrypt.py
experiments/sync_ua/: cert-ascs001.der  cert-prosys.der  modbus_2.py  modbus_ua.py  mqtt_ua.py  ua_sync.py
infra/: docker-compose.yml
infra/mqtt/: gen_cert_mqtt.sh
infra/mqtt-bridge/: gen_cert_mqtt.sh
notebooks/: analisys.ipynb
scripts/: a.py  aws-proxy.py  aws.py  client_mqtt_influx_none.py  client_mqtt_influx_none_sparkplug.py  client_none.py  client_none_improved.py  client_sign.py  client_sign_encrypt.py  read_influx.py  read_ua.py  read_ua_new.py  test_chatgpt.py  ua_none.py
tests/: conftest.py  test_opcua_basic.py
(+348 files in other folders)
